syntax = "proto3";

import "google/protobuf/timestamp.proto";

package api;

option go_package = "api/v1";

service Book {
  rpc create(createBookRequest) returns (book);
  rpc get(getBookRequest) returns (book);
  rpc list(listBookRequest) returns (books);
}

message createBookRequest {
  string title = 1;
  string description = 2;
}

message book {
  int64 id = 1;
  string title = 2;
  string description = 3;
  google.protobuf.Timestamp createdAt = 4;
  google.protobuf.Timestamp updatedAt = 5;
}

message books {
  repeated book books = 1;
}

message getBookRequest {
  int64 id = 1;
}

message listBookRequest {}